
2020-03-22  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (call_body): warn ON EXCEPTION for CALL STATIC and ignore
	  it instead of having them mutually exclusive
	* codegen.c (increase_output_line): fixed declaration of inline

2020-02-02  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c, cobc.h: added check for COB_UNIX_LF again

2019-12-23  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (sort_body): fixed class cast errors,
	  actually use the specified order if no data-name was specified

2019-11-18  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_key_components): extracted
	  from (output_file_initialization)
	* codegen.c (perform_label): minor refactoring
	* codgenc.c: call output_storage instead of output where the result is
	  fixed to be in the header
	* tree.h, parser.y: added flag_entry_for_goto to cb_field

2019-11-17  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_header): use current output target instead of
	  file pointer
	* codegen.c (output_indent): replaced by new functions
	  (output_block_open, output_block_close)
	* codegen.c: count lines in generated source file in output_line_number,
	  to do so adjust many calls to use the "correct" output function and never
	  include a newline within the output string
	* codegen.c (codegen), tree.h, cobc.c: adjust function to get generated
	  sourcefile name, keep static reference to it in "output_name"
	* flag.def, cobc.c: added flags for adjusted C source generation
	  -fgen-c-line-directives and -fgen-c-labels
	* codegen.c (output_cobol_info, output_c_info): added

2019-10-17  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (valid_screen_pos): inlining some macro-like functions back
	* typeck.c (cb_validate_crt_status, valid_screen_pos): more validation

2019-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c: moved alignment defines from libcob/common.h here
	* cobc.h: moved alignment exception for hpux from libcob/common.h here