@@ -1,4 +1,16 @@
 
+2020-03-31  Simon Sobisch <simonsobisch@gnu.org>
+
+	* field.c.y (cb_validate_78_item): full validation and resolving
+	  of level 78 value, even when not supported
+	* typeck.c (cb_validate_program_data): skip lvl 66 entries in odo-check
+	* parser.y, field.c: moved function (error_if_invalid_level_for_renames)
+	  to field.c
+	* field.c (cb_validate_renames_item): reordered checks
+	* field.c (cb_validate_renames_item), tree.h: cb_validate_program_data
+	* typeck.c (cb_build_length): workaround for bug #623 RENAMES with length 0
+	* parser.y (renames_entry): extended syntax checks for RENAMES
+
 2020-03-22  Simon Sobisch <simonsobisch@gnu.org>
 
 	* parser.y (call_body): warn ON EXCEPTION for CALL STATIC and ignore
